Fix spacing in education section

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -146,7 +146,7 @@ p {
 
 .school-spacing {
 	line-height:170%;
-	padding:20px;
+	padding:10px;
 }
 
 .profpic {
